// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Positions should display the correct bubble chart 1`] = `
.c0 {
  margin-bottom: 1rem;
  font-size: 15px;
  font-weight: normal;
}

.c1 {
  text-anchor: middle;
  height: 18rem;
  overflow: hidden;
  position: relative;
}

<div>
  <div
    class="c0"
  >
    Positions
  </div>
  <div
    class="c1"
  >
    <div
      class="analytics__positions-tooltip"
      data-testid="tooltip"
      style="visibility: hidden;"
    />
    <svg
      height="0"
      width="0"
    >
      <defs>
        <filter
          height="130%"
          id="drop-shadow"
        >
          <fegaussianblur
            in="SourceAlpha"
            result="blur"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            in="blur"
            result="offsetBlur"
          />
          <femerge>
            <femergenode
              in="offsetBlur"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Positions should display the correct bubble chart 2`] = `
<div>
  <div
    class="sc-jTQDnj bTIroT"
  >
    Positions
  </div>
  <div
    class="sc-iBdmCd duIjXM"
  >
    <div
      class="analytics__positions-tooltip"
      data-testid="tooltip"
      style="visibility: hidden;"
    />
    <svg
      height="0"
      width="0"
    >
      <defs>
        <filter
          height="130%"
          id="drop-shadow"
        >
          <fegaussianblur
            in="SourceAlpha"
            result="blur"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            in="blur"
            result="offsetBlur"
          />
          <femerge>
            <femergenode
              in="offsetBlur"
            />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
      </defs>
      <g
        class="node"
        style="visibility: visible;"
      >
        <circle
          cx="22.148709018834936"
          cy="65.27118787412081"
          r="15.240588068460097"
          style="fill: #ff274b; filter: url(#drop-shadow);"
        />
        <text
          class="analytics__positions-label"
          data-testid="positions-label-EUR"
          text-anchor="middle"
          x="22.148709018834936"
          y="69.27118787412081"
        >
          EUR
        </text>
      </g>
      <g
        class="node"
        style="visibility: visible;"
      >
        <circle
          cx="-23.866306276238102"
          cy="64.39407227724564"
          r="15"
          style="fill: #ff274b; filter: url(#drop-shadow);"
        />
        <text
          class="analytics__positions-label"
          data-testid="positions-label-AUD"
          text-anchor="middle"
          x="-23.866306276238102"
          y="68.39407227724564"
        >
          AUD
        </text>
      </g>
      <g
        class="node"
        style="visibility: visible;"
      >
        <circle
          cx="0.1299017306519406"
          cy="-10.47211575811071"
          r="60"
          style="fill: #01c38d; filter: url(#drop-shadow);"
        />
        <text
          class="analytics__positions-label"
          data-testid="positions-label-JPY"
          text-anchor="middle"
          x="0.1299017306519406"
          y="-6.472115758110711"
        >
          JPY
        </text>
      </g>
    </svg>
  </div>
</div>
`;
